--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,20 @@
-:root {
-    box-sizing: border-box;
-}
 html {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: skyblue;
+    font-family: 'D-Din Bold', Arial, Helvetica, sans-serif;
+    background-color: #000;
 }
 body {
     margin: 0;
+}
+
+/* Fonts */
+
+@font-face {
+    font-family: 'D-Din Bold';
+    src: url(D-DIN-Bold.otf);
+}
+@font-face {
+    font-family: 'D-Din';
+    src: url(D-Din.otf);
 }
 
 /* Header */
@@ -23,18 +31,28 @@ body {
     height: 100px;
     margin: 0 50px;
 }
+
+/* Header Left */
+
 .header__left {
     display: flex;
     justify-content: space-between;
 }
 .header__logo-link {
     width: 210px;
+    padding-left: 20px;
     margin-top: 8px;
+}
+.header__logo {
+    fill: #fff;
 }
 .nav__menu {
     display: flex;
     gap: 25px;
     list-style: none;
+}
+.nav__item {
+    position: relative;
 }
 .link {
     color: #fff;
@@ -43,7 +61,30 @@ body {
 }
 .nav__link, .header__link {
     font-size: 13px;
+    letter-spacing: 0.02rem;
 }
+.nav__link::after, .header__link::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #fff;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.4s ease-in-out;
+}
+.header__link::after {
+    width: 31.37px;
+}
+.nav__link:hover::after, .header__link:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+/* Header Right */
+
 .header__right {
     display: flex;
     justify-content: space-between;
@@ -78,30 +119,32 @@ body {
 }
 .header__hamburger-slider {
     position: absolute;
-    top: -50px;
+    top: -42px;
     left: 124px;
     width: 350px;
-    height: 4450%;
+    height: 100vh;
     background-color: #000;
     transition: left 0.3s ease-out;
 }
 .hamburger-nav {
-    /* display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 20px; */
     padding: 70px 50px 0 50px;
 }
 .hamburger-nav__item {
-    width: 100%;
+    display: flex;
+    align-items: center;
+    height: 40px;
     text-align: right;
-    padding: 12px 0;
-    border-bottom: 1px solid #8b939b;
+    border-bottom: 1pt solid #252525;
 }
 .hamburger-nav__link {
     width: 100%;
-    font-size: 14px;
+    font-family: 'D-Din';
+    font-size: 15px;
     font-weight: 100;
+    transition: color 0.3s ease-in-out;
+}
+.hamburger-nav__link:hover {
+    color: #8b939b;
 }
 .hamburger:target > .hamburger__content.transform-right {
     position: absolute;
@@ -139,9 +182,10 @@ main {
 }
 .section__content {
     position: absolute;
-    bottom: 15%;
+    bottom: 18%;
     left: 50px;
-    width: 250px;
+    width: 350px;
+    padding-left: 20px;
 }
 .headings {
     color: #fff;
@@ -156,12 +200,35 @@ h1 {
     font-size: 48px;
     font-weight: 400;
     margin-top: 10px;
+    text-shadow: 0 0 2px #555;
 }
 .button {
+    position: relative;
     font-size: 13px;
     padding: 15px 47px;
     border: 2px solid #fff;
     margin-top: 20px;
+}
+.button:hover {
+    z-index: 999;
+    color: #000;
+}
+.button__filler {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    width: 152px;
+    height: 47px;
+    background-color: #fff;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.3s;
+}
+.button:hover > .button__filler {
+    z-index: -1;
+    transform: scaleY(1);
+    transform-origin: bottom;
 }
 .section__two {
     background-image: url(spacex2.webp);
